# vector-similarity-search-for-Document-Retrieval

./: .dockerignore  .gitignore  .vercelignore  404.html  API_SETUP.md  DATASET_INTEGRATION.md  DEPLOY.md  DEPLOYMENT.md  Dockerfile  README.md  README.md.backup  RENDER_DEPLOYMENT.md  REPO_OVERVIEW.md  _config.yml  api_config.py  build.sh  constraints.txt  data_loader.py  demo.html  docker-compose.yml  docker-deploy.sh  evaluate.py  index.html  initialize_dataset.py  main.py  nginx.conf  pyproject.toml  requirements.txt  test.html  test_api.py  vercel.json
api/: index.py
assets/css/: demo.css
assets/data/: sample-papers.json
assets/js/: demo.js
docs/: index,html  index.html  test.html
docs/assets/css/: demo.css
docs/assets/data/: sample-papers.json
docs/assets/js/: demo.js
evaluation/: __init__.py  eval_queries.json  response_metrics.py  retrieval_metrics.py
example_data/: documents.txt
frontend/: package.json
kubernetes/: deployment.yaml
src/api/: endpoints.py
src/embeddings/: embedder.py
src/index/: index_manager.py
src/retrievers/: __init__.py  hnswlib_retriever.py
src/utils/: __init__.py  embedding_cache.py
tests/: tests_endpoints.py
