[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-search-system"
version = "1.0.0"
description = "RAG-based Vector Similarity Search System"
requires-python = ">=3.9,<3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "numpy>=1.21.0",
    "python-multipart>=0.0.5",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "sentence-transformers>=2.2.0",
    "hnswlib>=0.7.0",
    "torch>=1.12.0",
    "transformers>=4.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
